<?xml version="1.0"?>
<package format="2">
  <name>pan_tilt_gui</name>
  <version>0.0.1</version>
  <description>The pan_tilt_gui package provides an RQT GUI for controlling pan and tilt actuators in ROS.</description>

  <maintainer email="your.email@example.com">Pawandeep Singh Matharu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <!-- Export -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
